--- a/style.css
+++ b/style.css
@@ -28,6 +28,16 @@ header {
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
+@media (max-width: 414px) {
+    header {
+        display: none;
+    }
+}
+footer {
+    font-size: 0.7rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
 a {
     text-decoration: none;
     color: var(--link-color);
@@ -78,6 +88,9 @@ a.link:hover::after {
 }
 .ml-10 {
     margin-left: 10px;
+}
+.center {
+    text-align: center;
 }
 
 .container {
